Add LIT-based testing infrastructure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,26 @@ set(LLVM_LINK_COMPONENTS
 
 add_llvm_executable(sqlgen
   ${_SOURCE_FILES})
+
+set(FILECHECK_PATH "" CACHE FILEPATH "Path to FileCheck.")
+
+if (NOT FILECHECK_PATH)
+  # Try to find FileCheck from LLVM first
+  find_program(FILECHECK_EXE
+    FileCheck
+    NO_CACHE)
+
+  if (NOT FILECHECK_EXE)
+    # Then try to find the python version, filecheck
+    find_program(FILECHECK_EXE
+      filecheck
+      NO_CACHE)
+  endif()
+
+  if (FILECHECK_EXE)
+    message(STATUS "Using ${FILECHECK_EXE}")
+    set(FILECHECK_PATH ${FILECHECK_EXE})
+  endif()
+endif()
+
+add_subdirectory(test)
