Basic support for emitting SQL queries
TODO: Emit the WHERE clause from dag.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set(_SOURCE_FILES
     sqlgen.cpp
     SQLEmitter.cpp
     SQLInsertEmitter.cpp
+    SQLQueryEmitter.cpp
     SQLTableEmitter.cpp
     )
 
